Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,8 @@ variables:
 publish:
   image: docker:latest
   stage: publish
+  tags: 
+    - deployment
   services:
     - docker:dind
   script:
