--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,13 @@ stages:
   - build
 
 docker_build:
-  stage: build
+  stage: myjob
+  image: docker:latest
+  services:
+    - docker:dind
+  variables:
+    DOCKER_DRIVER: overlay2 # not sure if this is needed
+    DOCKER_TLS_CERTDIR: "/certs"
   script:
     - docker build -t example.com/example-image:latest .
     - docker push example.com/example-image:latest
