--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,5 +10,5 @@ docker_build:
     DOCKER_DRIVER: overlay2 # not sure if this is needed
     DOCKER_TLS_CERTDIR: "/certs"
   script:
-    - docker build -t example.com/example-image:latest .
-    - docker push example.com/example-image:latest
+    - docker build -t kgoben/jacktrack .
+    - docker push kgoben/jacktrack
