--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,9 +3,9 @@ stages:
 
 docker_build:
   stage: build
-  image: circleci/python:2.7.14
+  image: docker:latest
   services:
-    - docker:dind
+    - docker
   variables:
     DOCKER_DRIVER: overlay2 # not sure if this is needed
     DOCKER_TLS_CERTDIR: "/certs"
