--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ docker_build:
   stage: build
   image: docker:latest
   services:
-    - docker
+    - docker:latest
   variables:
     DOCKER_DRIVER: overlay2 # not sure if this is needed
     DOCKER_TLS_CERTDIR: "/certs"
