--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "axios": "^1.3.4",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "serverless-mysql": "^1.5.4"
   }
 }
