--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,8 @@
     "next-images": "^1.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-player": "^2.12.0",
+    "react-youtube": "^10.1.0",
     "serverless-mysql": "^1.5.4"
   }
 }
