--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,5 +18,10 @@
     "react-player": "^2.12.0",
     "react-youtube": "^10.1.0",
     "serverless-mysql": "^1.5.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   }
 }
