--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@supabase/supabase-js": "^2.33.1",
     "axios": "^1.3.4",
     "next": "13.1.6",
     "next-images": "^1.8.4",
