--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@supabase/supabase-js": "^2.33.1",
+    "@vercel/analytics": "^1.0.2",
     "axios": "^1.3.4",
     "next": "13.1.6",
     "next-images": "^1.8.4",
