--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "@vercel/analytics": "^1.0.2",
     "axios": "^1.3.4",
     "cookie": "^0.5.0",
+    "date-fns": "^2.30.0",
     "next": "13.1.6",
     "next-images": "^1.8.4",
     "react": "18.2.0",
