--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.3.4",
     "cookie": "^0.5.0",
     "date-fns": "^2.30.0",
-    "next": "13.1.6",
+    "lodash": "^4.17.21",
+    "next": "^13.5.2",
     "next-images": "^1.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
