--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-player": "^2.12.0",
+    "react-switch": "^7.0.0",
     "react-youtube": "^10.1.0",
     "serverless-mysql": "^1.5.4"
   },
