--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.21",
     "next": "^13.3.4",
     "next-images": "^1.8.4",
+    "pdfjs-dist": "^3.11.174",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-player": "^2.12.0",
